--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            <img src="public/images/mattari.png" width="112" height="28">
+            <img src="images/mattari.png" width="112" height="28">
           </a>
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
