--- a/src/index.html
+++ b/src/index.html
@@ -8,28 +8,25 @@
   </head>
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="images/mattari.png" width="112" height="28">
-          </a>
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          <img src="images/mattari.png" width="112" height="28">
+        </a>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-end">
+          <a class="navbar-item">Services</a>
+          <a class="navbar-item">Tech</a>
         </div>
-      
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end">
-            <a class="navbar-item">
-              Services
-            </a>
-            <a class="navbar-item">
-               Tech
-            </a>
-          </div>
-        </div>
-      </nav>
+      </div>
+    </nav>
+    <div class="container">
+    </div>
     <script type="text/javascript" src="javascripts/bundle.js"></script>
   </body>
   <footer class="footer">
