--- a/src/ishigaki.html
+++ b/src/ishigaki.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mattari</title>
+    <title>石垣の情報 | Mattari, inc</title>
+    <meta name="description" content="石垣へ行く方法をメモしてます" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/bundle.css" />
   </head>
   <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="/">
-          <img src="images/mattari.png" width="112" height="28">
-        </a>
-      </div>
-    </nav>
     <div class="container">
-      <h1 class="title is-3">石垣の情報</h1>
       <div class="tabs">
         <ul class="menu">
           <li class="menu-list"><a href="#plane">飛行機</a></li>
@@ -31,7 +24,7 @@
           </div>
           <p>行き方(27日に来る人向け)</p>
           <div class="table-container">
-            <table class="table">
+            <table class="table is-fullwidth is-bordered">
               <thead>
                 <tr>
                   <th>場所</th>
@@ -121,7 +114,7 @@
           </div>
           <p>行き方(28日に来る人向け)</p>
           <div class="table-container">
-            <table class="table">
+            <table class="table is-bordered is-fullwidth">
               <thead>
                 <tr>
                   <th>場所</th>
@@ -197,7 +190,8 @@
       <div id="hotel" class="content">
         <h2 class="title is-4">石垣のホテル</h2>
         <div>
-          <p>ホテルはリゾートホテルからビジネスホテル、Airbnbまであります。大人数の場合はホテルよりもAirbnbの方が広くてやすかったりします</p>
+          <p>ホテルはリゾートホテルからビジネスホテルまでありますが...リゾートホテルは高いです。</p>
+          <div class="content-hotel"></div>
         </div>
       </div>
       <p>＊8月24日時点の情報になります。ミスを発見した場合はお手数ですが、<a href="https://github.com/mattari-inc/corporate">こちら</a>までPull Requestをお願いします</p>
